feat: adds YT report on quizfunk

--- a/index.html
+++ b/index.html
@@ -33,20 +33,11 @@
                         class="label">Email</span></a></li>
             </ul>
             <p>Since I was a kid I love how code lets you create anything imaginable.<br> I'm committed, resilient, skilled, intelligent, in love with technology, ambitious and sociable.</p>
-            <p>I worked in many startups and my goal is to positively impact culture and technology of the people around me.
-            <br>Since 2015 I manage the great engineers at StyleLounge to build clean and scalable software.</p>
+            <p>I worked in many startups and my goal is to positively impact culture and technology of the people around me.</p>
+            <p>Since 2015 I manage the great engineers at StyleLounge to build clean and scalable software.
+                <br><a href="https://www.stylelounge.io" target="_blank">Show me the best company in the world!</a></p>
+            </p>
             <div class="items style1 small onscroll-fade-in">
-                <section>
-                    <div class="inner">
-                        <div style="background-image: url(images/sl-logo.png); background-repeat: no-repeat; display: block; height: 20px; width: 20px; background-size: contain; margin: 6px auto 23px;">
-                            &nbsp;
-                        </div>
-                        <h3>CTO @ StyleLounge</h3>
-                        <p>🚀 I manage @StyleLounge's great engineers. 🚀 We build reactive microservices at scale.
-                            <br><a href="https://www.stylelounge.io" target="_blank">Show me the best company in the world!</a></p>
-                        </p>
-                    </div>
-                </section>
                 <section>
                     <div class="inner">
                         <span class="icon style3 major fa-commenting-o"></span>
@@ -115,6 +106,16 @@
                         <h3>&ldquo;Migrating to Reactive Microservices&rdquo;<br>@ EuroStaff Connect<br>&nbsp;x</h3>
                         <p>
                             <iframe width="200" height="150" src="https://www.youtube.com/embed/EartCIsw80U?iv_load_policy=3&modestbranding=1&rel=0&showinfo=0"
+                                    frameborder="0" allowfullscreen></iframe>
+                        </p>
+                    </div>
+                </section>
+                <section>
+                    <div class="inner">
+                        <span class="icon style3 major fa-comments"></span>
+                        <h3>Startup Weekend 2014.<br />I'm on TV ;)<br />&nbsp;</h3>
+                        <p>
+                            <iframe width="200" height="150" src="https://www.youtube.com/embed/HYXGoTD8MNk?iv_load_policy=3&modestbranding=1&rel=0&showinfo=0"
                                     frameborder="0" allowfullscreen></iframe>
                         </p>
                     </div>
