fix: removes redundant letter

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <section>
                     <div class="inner">
                         <span class="icon style3 major fa-comments"></span>
-                        <h3>&ldquo;Migrating to Reactive Microservices&rdquo;<br>@ EuroStaff Connect<br>&nbsp;x</h3>
+                        <h3>&ldquo;Migrating to Reactive Microservices&rdquo;<br>@ EuroStaff Connect<br>&nbsp;</h3>
                         <p>
                             <iframe width="200" height="150" src="https://www.youtube.com/embed/EartCIsw80U?iv_load_policy=3&modestbranding=1&rel=0&showinfo=0"
                                     frameborder="0" allowfullscreen></iframe>
