feat: less pathos

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                 <li><a href="mailto:me@alexthiel.de" class="icon style2 fa-envelope"><span
                         class="label">Email</span></a></li>
             </ul>
-            <p>Since I was a kid I love how code lets you create anything imaginable.<br> I'm committed, resilient, skilled, intelligent, in love with technology, ambitious and sociable.</p>
-            <p>I worked in many startups and my goal is to positively impact culture and technology of the people around me.</p>
+            <p>Since I was a kid I love how code lets you create anything imaginable.<br> I'm committed, resilient, skilled, in love with technology, ambitious and sociable.
+            <br>I worked in many startups and my goal is to positively impact culture and technology of the people around me.</p>
             <p>Since 2015 I manage the great engineers at StyleLounge to build clean and scalable software.
-                <br><a href="https://www.stylelounge.io" target="_blank">More about the best company in the world at StyleLounge.io</a></p>
+                <br><a href="https://www.stylelounge.io" target="_blank">More about our team and technology at StyleLounge.io</a></p>
             </p>
             <div class="items style1 small onscroll-fade-in">
                 <section>
