feat: There is no box

--- a/404.html
+++ b/404.html
@@ -13,6 +13,7 @@
                 resume: "https://drive.google.com/file/d/1n162AucpzikRjBUpEWhbumNytlmquvS-/view",
                 schedule: "https://calendar.google.com/calendar/selfsched?sstoken=UUQ4Z083dy0yV2VyfGRlZmF1bHR8MmJjYTlhZWIxODM1NDgwOTU4MWQ0OWYyNTk2ZTUzMGY",
                 thesis: "https://drive.google.com/file/d/0By_VnNR4brAGNEZlX1YzR1JlVE0/view",
+                thereisnobox: "https://docs.google.com/document/d/1y9p3qOyrYfGyTu2xiCfRvW_1_8vgt-VfiOdaRoD9Mgc/edit",
             };
             if (map[path]) {
                 document.location.href = map[path];
