--- a/404.html
+++ b/404.html
@@ -6,6 +6,7 @@
     <script type="text/javascript">
         (function () {
             var path = window.location.pathname
+                .toLowerCase()
                 .replace(/^\//, "")
                 .replace(/\/$/, "");
 
