feat: mo sharing stuff 2

--- a/mo/index.html
+++ b/mo/index.html
@@ -5,12 +5,11 @@
   <meta name="keywords" content="hyperwild, creative, brand, product">
 
   <meta property="og:url" content="http://www.hyperwild.com">
-  <meta property="og:image:width" content="464">
-  <meta property="og:image:type" content="image/png">
-<meta property="og:image:height" content="350">
+  <meta property="og:image:width" content="1920">
+<meta property="og:image:height" content="1071">
   <meta property="og:title" content="Hyperwild">
 <meta property="og:description" content="Hyperwild delivers creative leadership, innovative product strategy &amp; delightful brand experience to high-growth digital businesses like NETAPORTER &amp; DEEPMIND.">
-<meta property="og:image" content="preview.png">
+<meta property="og:image" content="https://s3.amazonaws.com/aws-website-hyperwild-mgm3z/data/preview-image.jpg">
   <title>Hyperwild</title>
   <link rel="stylesheet" type="text/css" href="index_files/main.css">
   <link rel="icon" type="image/png" href="https://s3.amazonaws.com/aws-website-hyperwild-mgm3z/data/fav.png">
