--- a/mo/index.html
+++ b/mo/index.html
@@ -9,7 +9,7 @@
 <meta property="og:image:height" content="1071">
   <meta property="og:title" content="Hyperwild">
 <meta property="og:description" content="Hyperwild delivers creative leadership, innovative product strategy &amp; delightful brand experience to high-growth digital businesses like NETAPORTER &amp; DEEPMIND.">
-<meta property="og:image" content="https://s3.amazonaws.com/aws-website-hyperwild-mgm3z/data/preview-image.jpg">
+<meta property="og:image" content="http://s3.amazonaws.com/aws-website-hyperwild-mgm3z/data/preview-image.jpg">
   <title>Hyperwild</title>
   <link rel="stylesheet" type="text/css" href="index_files/main.css">
   <link rel="icon" type="image/png" href="https://s3.amazonaws.com/aws-website-hyperwild-mgm3z/data/fav.png">
