feat: adds aura, removes Xing

--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
             <ul class="icons">
                 <li><a href="https://www.linkedin.com/in/reasn" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a>
                 </li>
-                <li><a href="https://www.xing.com/profile/Alex_Thiel" class="icon style2 fa-xing"><span class="label">LinkedIn</span></a>
-                </li>
                 <li><a href="https://twitter.com/alexanderthiel" class="icon style2 fa-twitter"><span class="label">Twitter</span></a>
                 </li>
                 <li><a href="https://soundcloud.com/noreasn/likes" class="icon style2 fa-soundcloud"><span class="label">SoundCloud</span></a>
@@ -38,6 +36,15 @@
                 <br><a href="https://www.stylelounge.io" target="_blank">More about our team and technology at StyleLounge.io</a></p>
             </p>
             <div class="items style1 small onscroll-fade-in">
+                <section>
+                    <div class="inner">
+                        <img width="200" height="200" src="images/aura.png" />
+                        <h3>Aura</h3>
+                        <p>◉ With Aura you share ideas anonymously with nearby people ◉ It works person-to-person: no SIM, no internet, no blocking, no traces.
+                            <br><a href="https://www.getAura.io" target="_blank">getAura.io</a></br>
+                        </p>
+                    </div>
+                </section>
                 <section>
                     <div class="inner">
                         <span class="icon style3 major fa-commenting-o"></span>
@@ -61,31 +68,11 @@
                 </section>
                 <section>
                     <div class="inner">
-                        <span class="icon style3 major fa-comment"></span>
-                        <h3>&ldquo;Migrating to Reactive Microservices&rdquo;<br>@ code.talks commerce</h3>
-                        <p>The conference is targeted at <span style="white-space: nowrap">e-commerce</span>
-                            professionals both from engineering and other branches.
-                            <br><a href="https://docs.google.com/presentation/d/1jG5ZkYFQJgV93Pi-XFPU_PpFc2s3czk_pF9fpVRt8pM/edit?usp=sharing" target="_blank">Slides</a></br>
-                        </p>
-                    </div>
-                </section>
-                <section>
-                    <div class="inner">
                         <span class="icon style3 major fa-comments-o"></span>
                         <h3>&ldquo;Reactive node.js Microservices&rdquo;<br>@ jsunconf</h3>
                         <p>Jsunconf is my favorite (un)conference so far, the level is high, conversations are
                             meaningful and everybody's a potential speaker.
                             <br><a href="https://docs.google.com/presentation/d/1bUBwrrwuBM0SKTCnm9vl04tM4yX6s-V_J9Car-hS32Y/edit?usp=sharing" target="_blank">Slides</a></br>
-                        </p>
-                    </div>
-                </section>
-                <section>
-                    <div class="inner">
-                        <span class="icon style3 major fa-comments"></span>
-                        <h3>&ldquo;Migrating to Reactive Microservices&rdquo;<br>@ Foodora</h3>
-                        <p>Matthias was so kind as to invite me to Berlin and a lot of very interesting discussions
-                            happened after the talk.
-                            <br><a href="https://docs.google.com/presentation/d/1au1n4o0p92ynEN3Am5ONZaDp1pxkL8brzCpscOOmskE/edit?usp=sharing" target="_blank">Slides</a></br>
                         </p>
                     </div>
                 </section>
@@ -113,7 +100,7 @@
                 <section>
                     <div class="inner">
                         <span class="icon style3 major fa-comments"></span>
-                        <h3>Startup Weekend 2014.<br />I'm on TV ;)<br />&nbsp;</h3>
+                        <h3>Startup Weekend 2014</h3>
                         <p>
                             <iframe width="200" height="150" src="https://www.youtube.com/embed/HYXGoTD8MNk?iv_load_policy=3&modestbranding=1&rel=0&showinfo=0"
                                     frameborder="0" allowfullscreen></iframe>
@@ -257,8 +244,6 @@
         <div class="inner">
             <ul class="icons">
                 <li><a href="https://www.linkedin.com/in/reasn" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a>
-                </li>
-                <li><a href="https://www.xing.com/profile/Alex_Thiel" class="icon style2 fa-xing"><span class="label">LinkedIn</span></a>
                 </li>
                 <li><a href="https://twitter.com/alexanderthiel" class="icon style2 fa-twitter"><span class="label">Twitter</span></a>
                 </li>
