feat: updates where I currently work

--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
             </ul>
             <p>Since I was a kid I love how code lets you create anything imaginable.<br> I'm committed, resilient, skilled, in love with technology, ambitious and sociable.
             <br>I worked in many startups and my goal is to positively impact culture and technology of the people around me.</p>
-            <p>Since 2015 I manage the great engineers at StyleLounge to build clean and scalable software.
-                <br><a href="https://www.stylelounge.io" target="_blank">More about our team and technology at StyleLounge.io</a></p>
-            </p>
+            <p>I've cofounded and scaled startups and currently work with inspiring, ambitious people as CTO of <a href="https://www.wunder.org" target="_blank">Wunder Mobility</a></p>
             <div class="items style1 small onscroll-fade-in">
                 <section>
                     <div class="inner">
