feat: changes /meet to /wunder for Wunder self-sched

--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
                 resume: "https://drive.google.com/file/d/1n162AucpzikRjBUpEWhbumNytlmquvS-/view",
                 schedule: "https://calendar.google.com/calendar/selfsched?sstoken=UUQ4Z083dy0yV2VyfGRlZmF1bHR8MmJjYTlhZWIxODM1NDgwOTU4MWQ0OWYyNTk2ZTUzMGY",
                 // This is the Wunder self-sched, to be removed at some point
-                meet: "https://calendar.google.com/calendar/selfsched?sstoken=UUFZa3VVeUpwbm54fGRlZmF1bHR8MTBmMjMwMzIyZTE3NmJlNDY2MGZiYjc0ZWQ0ZWQ5Mjc",
+                wunder: "https://calendar.google.com/calendar/selfsched?sstoken=UUFZa3VVeUpwbm54fGRlZmF1bHR8MTBmMjMwMzIyZTE3NmJlNDY2MGZiYjc0ZWQ0ZWQ5Mjc",
                 thesis: "https://drive.google.com/file/d/0By_VnNR4brAGNEZlX1YzR1JlVE0/view",
                 thereisnobox: "https://docs.google.com/document/d/1y9p3qOyrYfGyTu2xiCfRvW_1_8vgt-VfiOdaRoD9Mgc/edit",
             };
