feat: adds knowledgebits.io linjk

--- a/index.html
+++ b/index.html
@@ -39,7 +39,17 @@
                         <img width="200" height="200" src="images/aura.png" />
                         <h3>Aura</h3>
                         <p>◉ With Aura you share ideas anonymously with nearby people ◉ It works person-to-person: no SIM, no internet, no blocking, no traces.
-                            <br><a href="https://www.getAura.io" target="_blank">getAura.io</a></br>
+                            <br><a href="https://www.getAura.io">getAura.io</a></br>
+                        </p>
+                    </div>
+                </section>
+                <section>
+                    <div class="inner">
+                        <p style="border-radius: 8px; width: 120px; height: 120px; display: flex; position: initial; background-color: #3884FF; align-items: center; justify-content: center; margin: 45px auto; padding: 0">
+                            <span style="color: white; font-size: 48px; line-height: 1.5; font-weight: 500">KB</span></p>
+                        <h3><a href="https://knowledgebits.io">KnowledgeBits.io</a></h3>
+                        <p>I recently started collecting patterns, realizations and best practices during my work as a tech manager in startups. This is it.
+                            <br><a href="https://knowledgebits.io">knowledgeBits.io</a></br>
                         </p>
                     </div>
                 </section>
@@ -82,16 +92,6 @@
                             <iframe width="200" height="150" src="https://www.youtube.com/embed/BRWbbf_Zaz0?iv_load_policy=3&modestbranding=1&rel=0&showinfo=0"
                                     frameborder="0" allowfullscreen></iframe>
                             <br><a href="https://docs.google.com/presentation/d/1jsPvK4RjvaiFvPvWktHsHr0Dawx1XegzcCqalnCe5-Q/edit?usp=sharing" target="_blank">Slides</a></br>
-                        </p>
-                    </div>
-                </section>
-                <section>
-                    <div class="inner">
-                        <span class="icon style3 major fa-comments"></span>
-                        <h3>&ldquo;Migrating to Reactive Microservices&rdquo;<br>@ EuroStaff Connect<br>&nbsp;</h3>
-                        <p>
-                            <iframe width="200" height="150" src="https://www.youtube.com/embed/EartCIsw80U?iv_load_policy=3&modestbranding=1&rel=0&showinfo=0"
-                                    frameborder="0" allowfullscreen></iframe>
                         </p>
                     </div>
                 </section>
