feat: adds links to img tags for Aura and knowledgeBits

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="items style1 small onscroll-fade-in">
                 <section>
                     <div class="inner">
-                        <img width="200" height="200" src="images/aura.png" />
+                        <a href="https://www.getAura.io"><img width="200" height="200" src="images/aura.png" /></a>
                         <h3>Aura</h3>
                         <p>◉ With Aura you share ideas anonymously with nearby people ◉ It works person-to-person: no SIM, no internet, no blocking, no traces.
                             <br><a href="https://www.getAura.io">getAura.io</a></br>
@@ -45,8 +45,10 @@
                 </section>
                 <section>
                     <div class="inner">
-                        <p style="border-radius: 8px; width: 120px; height: 120px; display: flex; position: initial; background-color: #3884FF; align-items: center; justify-content: center; margin: 45px auto; padding: 0">
-                            <span style="color: white; font-size: 48px; line-height: 1.5; font-weight: 500">KB</span></p>
+                        <p><a href="https://knowledgebits.io" style="text-decoration: none">
+                        <span style="border-radius: 8px; width: 120px; height: 120px; display: flex; position: initial; background-color: #3884FF; align-items: center; justify-content: center; margin: 45px auto; padding: 0">
+                            <span style="color: white; font-size: 48px; line-height: 1.5; font-weight: 500">KB</span></span>
+                        </a></p>
                         <h3><a href="https://knowledgebits.io">KnowledgeBits.io</a></h3>
                         <p>I recently started collecting patterns, realizations and best practices during my work as a tech manager in startups. This is it.
                             <br><a href="https://knowledgebits.io">knowledgeBits.io</a></br>
