feat: adds link to focus talk

--- a/404.html
+++ b/404.html
@@ -11,6 +11,7 @@
                 .replace(/\/$/, "");
 
             var map = {
+                focus: "https://docs.google.com/presentation/d/1YY7Efrm8dVM5mXv9n5OZzm7JeRK9qpyQngZ2h0H8hYg/view",
                 resume: "https://drive.google.com/file/d/1n162AucpzikRjBUpEWhbumNytlmquvS-/view",
                 schedule: "https://calendar.google.com/calendar/selfsched?sstoken=UUQ4Z083dy0yV2VyfGRlZmF1bHR8MmJjYTlhZWIxODM1NDgwOTU4MWQ0OWYyNTk2ZTUzMGY",
                 // This is the Wunder self-sched, to be removed at some point
