feat: adds Wunder

--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
             <div class="items style1 small onscroll-fade-in">
                 <section>
                     <div class="inner">
+                        <a href="https://www.wundermobility.com"><img width="200" height="200" src="images/wunder.png" /></a>
+                        <h3>Wunder</h3>
+                        <p>Wunder deploys new mobility services to manufacturers, tier 1 suppliers and municipalities in 50+ cities on 5 continents.
+                            <br><a href="https://www.wundermobility.com">wundermobility.com</a></br>
+                        </p>
+                    </div>
+                </section>
+                <section>
+                    <div class="inner">
                         <a href="https://www.getAura.io"><img width="200" height="200" src="images/aura.png" /></a>
                         <h3>Aura</h3>
                         <p>◉ With Aura you share ideas anonymously with nearby people ◉ It works person-to-person: no SIM, no internet, no blocking, no traces.
