feat: removes Wunder, adds Imagine Zero

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
             </ul>
             <p>Since I was a kid I love how code lets you create anything imaginable.<br> I'm committed, resilient, skilled, in love with technology, ambitious and sociable.
             <br>I worked in many startups and my goal is to positively impact culture and technology of the people around me.</p>
-            <p>I've cofounded and scaled startups and currently work with inspiring, ambitious people as CTO of <a href="https://www.wunder.org" target="_blank">Wunder Mobility</a></p>
+            <p>I've cofounded and scaled startups. Today I build <a href="https://www.imagine-zero.org" target="_blank">Imagine Zero</a>, a nonprofit accelerator to fight the climate crisis.</p>
             <div class="items style1 small onscroll-fade-in">
                 <section>
                     <div class="inner">
-                        <a href="https://www.wundermobility.com"><img width="200" height="200" src="images/wunder.png" /></a>
-                        <h3>Wunder</h3>
-                        <p>Wunder deploys new mobility services to manufacturers, tier 1 suppliers and municipalities in 50+ cities on 5 continents.
-                            <br><a href="https://www.wundermobility.com">wundermobility.com</a></br>
+                        <a href="https://www.imagine-zero.org"><img width="200" height="200" src="images/imagine-zero.png" /></a>
+                        <h3>Imagine Zero</h3>
+                        <p>We accelerate nonprofit ventures tech-enabled initiatives that fight the climate crisis.
+                            <br><a href="https://www.imagine-zero.org">Imagine-Zero.org</a></br>
                         </p>
                     </div>
                 </section>
