--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="items style1 small onscroll-fade-in">
                 <section>
                     <div class="inner">
-                        <a href="https://www.imagine-zero.org"><img width="200" height="200" src="images/imagine-zero.png" /></a>
+                        <a href="https://www.imagine-zero.org" target="_blank"><img width="200" height="200" src="images/imagine-zero.png" /></a>
                         <h3>Imagine Zero</h3>
                         <p>We accelerate nonprofit ventures tech-enabled initiatives that fight the climate crisis.
                             <br><a href="https://www.imagine-zero.org">Imagine-Zero.org</a></br>
@@ -45,7 +45,7 @@
                 </section>
                 <section>
                     <div class="inner">
-                        <a href="https://www.getAura.io"><img width="200" height="200" src="images/aura.png" /></a>
+                        <a href="https://www.getAura.io" target="_blank"><img width="200" height="200" src="images/aura.png" /></a>
                         <h3>Aura</h3>
                         <p>◉ With Aura you share ideas anonymously with nearby people ◉ It works person-to-person: no SIM, no internet, no blocking, no traces.
                             <br><a href="https://www.getAura.io">getAura.io</a></br>
@@ -54,7 +54,7 @@
                 </section>
                 <section>
                     <div class="inner">
-                        <p><a href="https://knowledgebits.io" style="text-decoration: none">
+                        <p><a href="https://knowledgebits.io" target="_blank" style="text-decoration: none">
                         <span style="border-radius: 8px; width: 120px; height: 120px; display: flex; position: initial; background-color: #3884FF; align-items: center; justify-content: center; margin: 45px auto; padding: 0">
                             <span style="color: white; font-size: 48px; line-height: 1.5; font-weight: 500">KB</span></span>
                         </a></p>
