feat: quick cleanup

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
             </ul>
             <p>Since I was a kid I love how code lets you create anything imaginable.<br> I'm committed, resilient, skilled, in love with technology, ambitious and sociable.
             <br>I worked in many startups and my goal is to positively impact culture and technology of the people around me.</p>
-            <p>I've cofounded and scaled startups. Today I build <a href="https://www.imagine-zero.org" target="_blank">Imagine Zero</a>, a nonprofit accelerator to fight the climate crisis.</p>
+            <p>I've cofounded and scaled startups. Today I build <a href="https://www.imagine-zero.org" target="_blank">Imagine Zero</a>, a platform for nonprofit ventures to make climate action fun and accessible.</p>
             <div class="items style1 small onscroll-fade-in">
                 <section>
                     <div class="inner">
                         <a href="https://www.imagine-zero.org" target="_blank"><img width="200" height="200" src="images/imagine-zero.png" /></a>
                         <h3>Imagine Zero</h3>
-                        <p>We accelerate nonprofit ventures tech-enabled initiatives that fight the climate crisis.
+                        <p>We make climate action fun and accessible by incubating nonprofit ventures.
                             <br><a href="https://www.imagine-zero.org">Imagine-Zero.org</a></br>
                         </p>
                     </div>
@@ -254,16 +254,16 @@
             <ul class="icons">
                 <li><a href="https://www.linkedin.com/in/reasn" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a>
                 </li>
-                <li><a href="https://twitter.com/alexanderthiel" class="icon style2 fa-twitter"><span class="label">Twitter</span></a>
+                <li><a href="https://github.com/reasn" class="icon style2 fa-github"><span class="label">GitHub</span></a>
                 </li>
                 <li><a href="https://soundcloud.com/noreasn/likes" class="icon style2 fa-soundcloud"><span class="label">SoundCloud</span></a>
                 </li>
-                <li><a href="https://github.com/reasn" class="icon style2 fa-github"><span class="label">GitHub</span></a>
+                <li><a href="https://twitter.com/alexanderthiel" class="icon style2 fa-twitter"><span class="label">Twitter</span></a>
                 </li>
                 <li><a href="mailto:me@alexthiel.de" class="icon style2 fa-envelope"><span
                         class="label">Email</span></a></li>
             </ul>
-            <p>&copy; 2017 Alexander Thiel. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+            <p>&copy; Alexander Thiel. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
         </div>
     </footer>
 
