feat: adds changemaker, cleanup

--- a/index.html
+++ b/index.html
@@ -45,29 +45,37 @@
                 </section>
                 <section>
                     <div class="inner">
-                        <a href="https://www.getAura.io" target="_blank"><img width="200" height="200" src="images/aura.png" /></a>
-                        <h3>Aura</h3>
-                        <p>◉ With Aura you share ideas anonymously with nearby people ◉ It works person-to-person: no SIM, no internet, no blocking, no traces.
-                            <br><a href="https://www.getAura.io">getAura.io</a></br>
-                        </p>
-                    </div>
-                </section>
-                <section>
-                    <div class="inner">
                         <p><a href="https://knowledgebits.io" target="_blank" style="text-decoration: none">
                         <span style="border-radius: 8px; width: 120px; height: 120px; display: flex; position: initial; background-color: #3884FF; align-items: center; justify-content: center; margin: 45px auto; padding: 0">
                             <span style="color: white; font-size: 48px; line-height: 1.5; font-weight: 500">KB</span></span>
                         </a></p>
                         <h3><a href="https://knowledgebits.io">KnowledgeBits.io</a></h3>
-                        <p>I recently started collecting patterns, realizations and best practices during my work as a tech manager in startups. This is it.
+                        <p>A collection of patterns, realizations, best practices and reads during my work as a tech manager in startups.
                             <br><a href="https://knowledgebits.io">knowledgeBits.io</a></br>
                         </p>
                     </div>
                 </section>
                 <section>
                     <div class="inner">
-                        <span class="icon style3 major fa-commenting-o"></span>
-                        <h3>&ldquo;Patterns for reactive node.js Microservices&rdquo;<br>@ code.talks</h3>
+                        <a href="https://www.imagine-zero.org" target="_blank"><img width="140" height="140" style="margin:30px" src="images/podcast-cover-changemaker-1x1.jpg" /></a>
+                        <h3><a href="https://www.changemakerpodcast.de/episode/alexander-thiel">Interview on Changemaker Pod</a></h3>
+                        <p>Interview about climate change, startups, activism, decision-making and playfullness.
+                            <br><a href="https://www.changemakerpodcast.de/episode/alexander-thiel">Changemaker Pod</a></br>
+                        </p>
+                    </div>
+                </section>
+                <section>
+                    <div class="inner">
+                        <a href="https://www.getAura.io" target="_blank"><img width="200" height="200" src="images/aura.png" /></a>
+                        <h3>Aura</h3>
+                        <p>A little anti-censorship side project that allows sharing ideas anonymously with nearby people. It works without SIM or internet.
+                            <br><a href="https://www.getAura.io">getAura.io</a></br>
+                        </p>
+                    </div>
+                </section>
+                <section>
+                    <div class="inner">
+                        <h3>&ldquo;Patterns for Reactive Microservices&rdquo;<br>@ code.talks 2017</h3>
                         <p>
                             <iframe width="200" height="150" src="https://www.youtube.com/embed/GcMlxkFf6zk?iv_load_policy=3&modestbranding=1&rel=0&showinfo=0"
                                     frameborder="0" allowfullscreen></iframe>
@@ -77,17 +85,6 @@
                 </section>
                 <section>
                     <div class="inner">
-                        <span class="icon style3 major fa-comment-o"></span>
-                        <h3>&ldquo;Patterns for reactive node.js Microservices&rdquo;<br>@ nodeHH</h3>
-                        <p>
-                            <iframe width="200" height="150" src="https://www.youtube.com/embed/F_K5S1NAZOU?iv_load_policy=3&modestbranding=1&rel=0&showinfo=0"
-                                    frameborder="0" allowfullscreen></iframe>
-                            <br><a href="https://docs.google.com/presentation/d/1XKF9c2X-zq1JoappshcvqJXIaZBsM16222I4IJ3O7RE/edit?usp=sharing" target="_blank">Slides</a></p>
-                    </div>
-                </section>
-                <section>
-                    <div class="inner">
-                        <span class="icon style3 major fa-comments-o"></span>
                         <h3>&ldquo;Reactive node.js Microservices&rdquo;<br>@ jsunconf</h3>
                         <p>Jsunconf is my favorite (un)conference so far, the level is high, conversations are
                             meaningful and everybody's a potential speaker.
@@ -97,8 +94,7 @@
                 </section>
                 <section>
                     <div class="inner">
-                        <span class="icon style3 major fa-comments-o"></span>
-                        <h3>&ldquo;Migrating to Reactive Microservices&rdquo;<br>@ Google Developer Group</h3>
+                        <h3>&ldquo;Migrating to Reactive Microservices&rdquo;<br>@ Google DG</h3>
                         <p>
                             <iframe width="200" height="150" src="https://www.youtube.com/embed/BRWbbf_Zaz0?iv_load_policy=3&modestbranding=1&rel=0&showinfo=0"
                                     frameborder="0" allowfullscreen></iframe>
@@ -108,8 +104,8 @@
                 </section>
                 <section>
                     <div class="inner">
-                        <span class="icon style3 major fa-comments"></span>
                         <h3>Startup Weekend 2014</h3>
+                        <p>A 3min short report on German TV about our team at Startup weekend 2014.</p>
                         <p>
                             <iframe width="200" height="150" src="https://www.youtube.com/embed/HYXGoTD8MNk?iv_load_policy=3&modestbranding=1&rel=0&showinfo=0"
                                     frameborder="0" allowfullscreen></iframe>
