feat: adds link to medium

--- a/index.html
+++ b/index.html
@@ -19,15 +19,17 @@
         <div class="inner">
             <h2>Hi, I'm Alexander Thiel.</h2>
             <ul class="icons">
-                <li><a href="https://www.linkedin.com/in/reasn" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a>
+                <li><a href="https://www.linkedin.com/in/reasn" target="_blank" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a>
                 </li>
-                <li><a href="https://twitter.com/alexanderthiel" class="icon style2 fa-twitter"><span class="label">Twitter</span></a>
+                <li><a href="https://medium.com/@alexthiel" target="_blank" class="icon style2 fa-medium"><span class="label">Medium</span></a>
                 </li>
-                <li><a href="https://soundcloud.com/noreasn/likes" class="icon style2 fa-soundcloud"><span class="label">SoundCloud</span></a>
+                <li><a href="https://twitter.com/alexanderthiel" target="_blank" class="icon style2 fa-twitter"><span class="label">Twitter</span></a>
                 </li>
-                <li><a href="https://github.com/reasn" class="icon style2 fa-github"><span class="label">GitHub</span></a>
+                <li><a href="https://soundcloud.com/noreasn/likes" target="_blank" class="icon style2 fa-soundcloud"><span class="label">SoundCloud</span></a>
                 </li>
-                <li><a href="mailto:me@alexthiel.de" class="icon style2 fa-envelope"><span
+                <li><a href="https://github.com/reasn" target="_blank" class="icon style2 fa-github"><span class="label">GitHub</span></a>
+                </li>
+                <li><a href="mailto:me@alexthiel.de" target="_blank" class="icon style2 fa-envelope"><span
                         class="label">Email</span></a></li>
             </ul>
             <p>Since I was a kid I love how code lets you create anything imaginable.<br> I'm committed, resilient, skilled, in love with technology, ambitious and sociable.
@@ -58,9 +60,9 @@
                 <section>
                     <div class="inner">
                         <a href="https://www.imagine-zero.org" target="_blank"><img width="140" height="140" style="margin:30px" src="images/podcast-cover-changemaker-1x1.jpg" /></a>
-                        <h3><a href="https://www.changemakerpodcast.de/episode/alexander-thiel">Interview on Changemaker Pod</a></h3>
+                        <h3><a href="https://www.changemakerpodcast.de/episode/alexander-thiel">Interview on Changemaker</a></h3>
                         <p>Interview about climate change, startups, activism, decision-making and playfullness.
-                            <br><a href="https://www.changemakerpodcast.de/episode/alexander-thiel">Changemaker Pod</a></br>
+                            <br><a href="https://www.changemakerpodcast.de/episode/alexander-thiel">Changemaker Podcast</a></br>
                         </p>
                     </div>
                 </section>
@@ -116,6 +118,19 @@
         </div>
     </section>
     <!-- One -->
+    <section
+            class="banner style1 orient-right content-align-left image-position-left fullscreen onload-image-fade-in onload-content-fade-left">
+        <div class="content">
+            <h1>My recent posts</h1>
+            <p>You can find some of what I post on <a href="https://medium.com/@alexthiel" target="_blank">medium.com/@alexthiel</a>.
+            <blockquote>We are not worried about the meme situation.
+            </blockquote>
+            <p><a href="https://unsplash.com/photos/YvQ_6rZEN3I" target="_blank">Picture: Daniel Olah</a></p>
+        </div>
+        <div class="image">
+            <img src="images/daniel-olah-YvQ_6rZEN3I-unsplash.jpg" style="object-position: bottom left;" alt=""/>
+        </div>
+    </section>
     <section
             class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
         <div class="content">
@@ -248,15 +263,17 @@
     <footer class="wrapper style1 align-center">
         <div class="inner">
             <ul class="icons">
-                <li><a href="https://www.linkedin.com/in/reasn" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a>
+                <li><a href="https://www.linkedin.com/in/reasn" target="_blank" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a>
                 </li>
-                <li><a href="https://github.com/reasn" class="icon style2 fa-github"><span class="label">GitHub</span></a>
+                <li><a href="https://medium.com/@alexthiel" target="_blank" class="icon style2 fa-medium"><span class="label">Medium</span></a>
                 </li>
-                <li><a href="https://soundcloud.com/noreasn/likes" class="icon style2 fa-soundcloud"><span class="label">SoundCloud</span></a>
+                <li><a href="https://github.com/reasn" target="_blank" class="icon style2 fa-github"><span class="label">GitHub</span></a>
                 </li>
-                <li><a href="https://twitter.com/alexanderthiel" class="icon style2 fa-twitter"><span class="label">Twitter</span></a>
+                <li><a href="https://soundcloud.com/noreasn/likes" target="_blank" class="icon style2 fa-soundcloud"><span class="label">SoundCloud</span></a>
                 </li>
-                <li><a href="mailto:me@alexthiel.de" class="icon style2 fa-envelope"><span
+                <li><a href="https://twitter.com/alexanderthiel" target="_blank" class="icon style2 fa-twitter"><span class="label">Twitter</span></a>
+                </li>
+                <li><a href="mailto:me@alexthiel.de" target="_blank" class="icon style2 fa-envelope"><span
                         class="label">Email</span></a></li>
             </ul>
             <p>&copy; Alexander Thiel. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
